# Server

./: CMakeLists.txt  Engine.h  FooEngine.cpp  FooReceiver.cpp  README.md  Receiver.h  findclouds.cpp  findclouds.h  main.cpp
client/: CMakeLists.txt  client.cpp
detect/: CMakeLists.txt  main.cpp  sundetector.cpp  sundetector.h
docs/: backlog.xlsx  class diagram.puml  sequence diagram.puml  use-case.puml
include/: App.h  Recognizer.h  Sendler.h
net/: READMESERVER.md  arm_server
net/include/: gpio_control.h
net/src/: gpio_control.c  server.cpp
server/: CMakeLists.txt  server.cpp
src/: app.cpp  main.cpp  recognizer.cpp  sendler.cpp
